feat: added implementation for the basic authentication and registration of our app.
